[gd_scene load_steps=3 format=3 uid="uid://dhtudq5lcjm0n"]

[ext_resource type="Texture2D" uid="uid://bofw1u406nhk8" path="res://icon.svg" id="1_xkkcm"]
[ext_resource type="Script" uid="uid://dtw13joybxe8n" path="res://ui/potrait_button.gd" id="1_ywikn"]

[node name="PotraitButton" type="Button"]
custom_minimum_size = Vector2(160, 64)
offset_right = 473.0
offset_bottom = 189.0
icon_alignment = 1
script = ExtResource("1_ywikn")

[node name="Mask" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.000002
offset_top = 2.0
offset_right = 179.66666
offset_bottom = 152.0
scale = Vector2(0.6, 0.6)
color = Color(1, 1, 1, 0.13725491)

[node name="Portrait" type="TextureRect" parent="."]
visibility_layer = 2
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 183.66666
offset_bottom = 161.66667
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_xkkcm")
expand_mode = 1

[node name="Border" type="ColorRect" parent="."]
visibility_layer = 4
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 180.33331
offset_bottom = 155.33333
scale = Vector2(0.6, 0.6)
color = Color(1, 1, 0.3137255, 0.27450982)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 119.0
offset_right = 245.0
offset_bottom = 163.0
text = "Name"
horizontal_alignment = 1

[node name="StarLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 5.0
offset_right = 170.0
offset_bottom = 37.0
text = "*1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
